@@ -1,7 +1,7 @@
 TARGMODEL=	Inferno
 TARGSHTYPE=	sh
 CPUS=		arm
-OBJDIR=		Inferno/arm		#force everything to point to inferno directory
+OBJDIR=		Inferno/thumb		#force everything to point to inferno directory
 
 O=		t
 OS=		5t
@@ -11,10 +11,10 @@ ARFLAGS=	vu
 ARPREFIX=
 
 AS=		5a
-ASFLAGS=
+ASFLAGS=	-t
 
 CC=		tc
-CFLAGS=		-wFV -I$ROOT/Inferno/arm/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Inferno/thumb/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		5l
